<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="tv_hello">Hello World</string>
    <string name="btn_text">I\'m a Button</string>
    <string name="tv_login">Login</string>
    <string name="et_hint_login">Please type your e-mail here</string>
    <string name="et_hint_password">Pleaste type your password</string>
    <string name="tv_password">Password</string>
    <string name="btn_radial">RadioButton</string>
    <string name="btn_checkbox">Checkbox</string>
    <string name="btn_switch">What does this do?</string>
    <string name="btn_login">Login</string>
    <string name="modal_dialog_message">Do you want to exit the app?</string>
    <string name="modal_dialog_title">Exit</string>
    <string name="modal_ok">OK</string>
    <string name="modal_no">NO</string>
    <string name="btn_chat">Start Chat</string>
    <string name="iv_description">An Image</string>
    <string name="btn_weather">Start Forecast</string>
    <string name="btn_toolbar">Test Toolbar</string>
    <string name="btn_snack">Snackbar</string>
    <string name="dia_title">Do you want to cancel</string>
    <string name="dia_pos">Yes</string>
    <string name="dia_neg">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
